--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,18 @@ build/
 .vscode/
 
 ### eclipse ###
+# eclipse specific git ignore
+*.pydevproject
+.project
 .metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
